# SDL_C

./: 001.TextAnimate.c  005.TextAnimate.c  005.TextAnimate_mac.c  01.LinkDots.c  README.md  SDL控制.c  SDL控制.cpp  drawRect.c  mac_gcc.sh  z_gitpush.bat  学习SDL.c  找钱预算.c
004/: 04_key_presses.c  04_key_presses.cpp
playSDL/: CMakeLists.txt  main.cpp
walk/: animate.c
